# gmail_chat_generator

./: INSTALL.md  README.md  main.py  pyproject.toml
src/: config.py  processor.py
src/service/: data_automation.py  email_body_cleaner.py  email_processor.py  gmail_client.py  message_body_formatter.py  report_formatter.py  thread_deduplicator.py
tests/: test_integration.py
