[tool.poetry]
name = "Gmail filter"
version = "0.1.0"
description = "Gmail email extraction and filtering tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.111.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
